fixing small bug with opacity on adRoot

--- a/css/style.css
+++ b/css/style.css
@@ -190,7 +190,7 @@ sprite-retina ($collapsed-background-map, 'keep')
 .shown {
   display: block; }
 
-.invisible {
+.invisible, #adRoot {
   opacity: 0; }
 
 #adRoot {
