--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,7 +15,7 @@ $grey: #666666;
 $red: #ff0000;
 $cta-hover: #0000FF;
 
-// spritesheet prefixes  
+// spritesheet prefixes
 
 /*
 $collapsed-background-map
@@ -76,6 +76,7 @@ sprite-retina ($collapsed-background-map, 'keep')
 // Root Scope
 #adRoot {
   @extend .size-collapsed;
+  @extend .invisible;
   position: absolute;
   overflow: hidden;
   top: 0;
