--- a/sass/hook-mixins/_sprite-mixins.scss
+++ b/sass/hook-mixins/_sprite-mixins.scss
@@ -109,7 +109,17 @@ To change `display` (e.g. `display: inline-block;`), we suggest using a common C
 
 @mixin sprite-retina($master-map,$item-map) {
   @include sprite-image($master-map,$item-map);
-  @include sprite-width-retina($master-map,$item-map);
-  @include sprite-height-retina($master-map,$item-map);
-  @include sprite-scale-retina($master-map,$item-map);
+  @include sprite-position($master-map,$item-map);
+  @include sprite-width($master-map,$item-map);
+  @include sprite-height($master-map,$item-map);
+    -webkit-transform-origin: left top;
+    -moz-transform-origin: left top;
+    -ms-transform-origin: left top;
+    -o-transform-origin: left top;
+    transform-origin: left top;
+    -webkit-transform: scale(0.5);
+    -moz-transform: scale(0.5);
+    -ms-transform: scale(0.5);
+    -o-transform: scale(0.5);
+    transform: scale(0.5);
 }
