moved border color var to main sass closes #1

--- a/sass/template/_standard-border.scss
+++ b/sass/template/_standard-border.scss
@@ -1,6 +1,6 @@
 .border {
 
-  background-color: black;
+  background-color: $border-color;
   position: absolute;
   pointer-events: none;
   width: 1px;
