--- a/css/style.css
+++ b/css/style.css
@@ -209,8 +209,8 @@ sprite-retina ($collapsed-background-map, 'keep')
     text-align: center;
     left: 110px;
     top: 115px; }
-    #adRoot .cta:hover {
-      color: #0000FF; }
+  #adRoot .cta-hover {
+    color: #0000FF; }
   #adRoot .bg-image {
     position: absolute;
     width: 150px;
