--- a/css/style.css
+++ b/css/style.css
@@ -149,22 +149,6 @@ SCSS variables are information about icon's compiled state, stored under its ori
 
 At the bottom of this section, we provide information about the spritesheet itself
 */
-/** set up variables **/
-/*
-$collapsed-background-map
-$collapsed-foreground-map
-
-
-You need to use these functions to display the images
-
-
-This does a 1X sprite. 100% size of image in spritesheet.  Provide the map and the image name
-sprite ($collapsed-background-map, 'keep');
-
-This does a 2X sprite. 50% of image in spritesheet. 2:1 Provide the map and the image name
-sprite-retina ($collapsed-background-map, 'keep')
-
-*/
 .border, .left-collapsed-border, .right-collapsed-border, .top-collapsed-border, .bottom-collapsed-border {
   background-color: black;
   position: absolute;
@@ -256,3 +240,11 @@ sprite-retina ($collapsed-background-map, 'keep')
     left: 40px; }
   #adRoot .abs-banner {
     position: absolute; }
+
+#image-hack {
+  opacity: 0;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  left: -40px;
+  overflow: hidden; }
